--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,13 @@
 {
-  "extends": ["next", "next/core-web-vitals"]
+	"extends": ["next", "next/core-web-vitals", "airbnb", "airbnb/hooks"],
+	"rules": {
+		"@next/next/no-img-element": "off",
+		"no-unused-vars":"warn",
+		"comma-dangle":"off",
+		"react/prop-types": "off",
+		"jsx-a11y/anchor-is-valid": "off",
+		"import/prefer-default-export": "off",
+		"react/jsx-props-no-spreading": "off",
+		"react/jsx-filename-extension": "off"
+	}
 }
