--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
 		"jsx-a11y/anchor-is-valid": "off",
 		"import/prefer-default-export": "off",
 		"react/jsx-props-no-spreading": "off",
-		"react/jsx-filename-extension": "off"
+		"react/jsx-filename-extension": "off",
+		"operator-linebreak":"off"
 	}
 }
