Create Category Homes Page Layout. Divide page into "HomeList" and "HomeCard" components. Add custom "useFetchCategoryHomes" hook. Realize infinte scroll logic using "IntersectionObserver" API.

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,8 @@
 		"import/prefer-default-export": "off",
 		"react/jsx-props-no-spreading": "off",
 		"react/jsx-filename-extension": "off",
-		"operator-linebreak":"off"
+		"operator-linebreak":"off",
+		"react/jsx-one-expression-per-line": "off",
+		"react/no-array-index-key": "off"
 	}
 }
