--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "test": "jest",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -14,6 +15,7 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "google-map-react": "^2.1.10",
+    "json-server": "^0.16.3",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -23,6 +25,10 @@
     "swr": "^0.5.6"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.1.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "babel-jest": "^27.0.6",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-next": "11.0.1",
@@ -30,6 +36,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "jest": "^27.0.6",
+    "jest-dom": "^4.0.0",
     "jsdom": "^16.6.0",
     "jsdom-global": "^3.0.2"
   }
