--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jest": "^27.0.6",
     "jest-dom": "^4.0.0",
     "jsdom": "^16.6.0",
-    "jsdom-global": "^3.0.2"
+    "jsdom-global": "^3.0.2",
+    "react-test-renderer": "^17.0.2"
   }
 }
