--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   "dependencies": {
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "axios": "^0.21.1",
+    "formik": "^2.2.9",
     "google-map-react": "^2.1.10",
     "json-server": "^0.16.3",
+    "material-ui-dropzone": "^3.5.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-slick": "^0.28.1",
     "sass": "^1.35.2",
     "slick-carousel": "^1.8.1",
-    "swr": "^0.5.6"
+    "swr": "^0.5.6",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.1.0",
