--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
     "react-slick": "^0.28.1",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.35.2",
     "slick-carousel": "^1.8.1",
     "swr": "^0.5.6",
