--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@testing-library/react": "^12.0.0",
     "@types/node": "^16.4.3",
     "@types/react": "^17.0.15",
+    "@types/react-redux": "^7.1.18",
     "babel-jest": "^27.0.6",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "18.2.1",
