--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "server": "json-server --watch db.json --port 8000"
+    "server": "json-server --watch db.json --port 8000",
+    "export": "npm run build && next export -o _static"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.1",
@@ -35,9 +36,11 @@
     "@testing-library/dom": "^8.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@types/google-map-react": "^2.1.2",
     "@types/node": "^16.4.3",
     "@types/react": "^17.0.15",
     "@types/react-redux": "^7.1.18",
+    "@types/react-slick": "^0.23.5",
     "babel-jest": "^27.0.6",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "18.2.1",
