--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-	"extends": ["next", "next/core-web-vitals", "airbnb", "airbnb/hooks"],
+	"extends": ["next", "next/core-web-vitals"],
 	"rules": {
 		"@next/next/no-img-element": "off",
 		"no-unused-vars":"warn",
