--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,16 @@
 {
 	"extends": ["next", "next/core-web-vitals"],
 	"rules": {
-		"@next/next/no-img-element": "off",
-		"no-unused-vars":"warn",
-		"comma-dangle":"off",
-		"react/prop-types": "off",
-		"jsx-a11y/anchor-is-valid": "off",
-		"import/prefer-default-export": "off",
-		"react/jsx-props-no-spreading": "off",
-		"react/jsx-filename-extension": "off",
-		"operator-linebreak":"off",
-		"react/jsx-one-expression-per-line": "off",
-		"react/no-array-index-key": "off"
+		"@next/next/no-img-element": "off"
+		// "no-unused-vars":"warn",
+		// "comma-dangle":"off",
+		// "react/prop-types": "off",
+		// "jsx-a11y/anchor-is-valid": "off",
+		// "import/prefer-default-export": "off",
+		// "react/jsx-props-no-spreading": "off",
+		// "react/jsx-filename-extension": "off",
+		// "operator-linebreak":"off",
+		// "react/jsx-one-expression-per-line": "off",
+		// "react/no-array-index-key": "off"
 	}
 }
